--- a/03-11-22/index.html
+++ b/03-11-22/index.html
@@ -22,12 +22,15 @@
         <li>
           <a href="http://">Deals</a>
         </li>
+        <li>
+          <p class="login-menu">Login</p>
+        </li>
       </ul>
     </nav>
     <main>
       <div class="hero">
         <div class="hero-title">
-          <h1>Shopping and department store</h1>
+          <h1>Find a chair of your dream here</h1>
           <p>
             Shopping is a bit of relaxing hobby for me, which is something
             troubling fot the bank ballance
@@ -42,7 +45,7 @@
         <!-- here will be JS div -->
       </div>
       <section class="subscribtionform">
-        <h3>Be The First To Get Update Of Our Hot Deals</h3>
+        <h3>Be the first to get update of our hot deals</h3>
         <div class="form1">
           <form action=""></form>
           <input
@@ -64,6 +67,26 @@
         <div class="banner-img">
           <img src="./banner.jpg" alt="banner image" />
         </div>
+      </div>
+      <div class="modal">
+       <div class="modal-content">
+         <h3>LOGIN</h3>
+         <form class="login-form" action="">
+           <label for="name"></label>
+           <input
+            type="text"
+            name="username"
+            class="username"
+            placeholder="Username"
+            required
+           />
+           <label for="password"></label>
+           <input type="password" class="password" placeholder="Password" required
+           />
+           <button class="login-btn">LOGIN</button>
+           <button class="close-modal-btn">X</button>
+        </form>
+       </div>
       </div>
     </main>
     <footer>
