--- a/11-11-22/index.html
+++ b/11-11-22/index.html
@@ -8,16 +8,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p class="loader">Loading...</p>
-    <div class="main">
-      <div class="card">
-        <h4 class="advise-title">Advice #</h4>
-        <p class="advice"></p>
-        <img src="./pattern-divider-mobile.svg" alt="" />
-      </div>
-      <div class="button">
-        <img src="./icon-dice.svg" alt="" />
-      </div>
+    <h1 class="main-title">Pokedex</h1>
+    <div class="main-div"></div>
+    <div class="buttons">
+      <button class="btn-previous">Previous</button>
+      <button class="btn-next">Next</button>
     </div>
     <script src="./script.js"></script>
   </body>
