--- a/14-11-22/index.html
+++ b/14-11-22/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="lds-roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <h1 class="main-title">Posts</h1>
     <div class="main-div"></div>
     <div class="buttons">
