--- a/03-11-22/index.html
+++ b/03-11-22/index.html
@@ -41,8 +41,8 @@
         <div class="hero-title">
           <h1>Find a chair of your dream here</h1>
           <p>
-            Shopping is a bit of relaxing hobby for me, which is something
-            troubling fot the bank ballance
+            Shopping is a bit of relaxing hobby for me<!-- , which is something
+            troubling fot the bank ballance -->
           </p>
           <button>Learn more</button>
         </div>
