media query added

--- a/code-week1.0/index.html
+++ b/code-week1.0/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <div class="image-background-mobile">
+      <img src="./background/catania_1x_mobile.jpg" alt="" />
+    </div>
     <div class="image-background">
       <img src="./background/catania_1x.jpg" alt="" />
     </div>
