pressure and wind speed added

--- a/code-week1.0/index.html
+++ b/code-week1.0/index.html
@@ -99,6 +99,22 @@
               <p>Humidity</p>
             </div>
           </div>
+          <div class="column pressure">
+            <i class="bx bxs-arrow-to-bottom"></i>
+            <div class="details">
+              <div class="pres">
+                <span class="numb-2">_</span>
+              </div>
+              <p>Pressure</p>
+            </div>
+          </div>
+          <div class="column wind-speed">
+            <i class="bx bx-wind"></i>
+            <div class="details">
+              <span>_</span>
+              <p>Wind speed</p>
+            </div>
+          </div>
         </div>
       </section>
     </div>
