menu fixed videobackground switch fixed

--- a/code-week/index.html
+++ b/code-week/index.html
@@ -12,12 +12,12 @@
     />
   </head>
   <body>
-    <div class="image-background-mobile">
+    <!-- <div class="image-background-mobile">
       <img src="./background/catania_1x_mobile.jpg" alt="" />
     </div>
     <div class="image-background">
       <img src="./background/catania_1x.jpg" alt="" />
-    </div>
+    </div> -->
     <div class="video-background">
       <video
         src="./background/rain.mp4"
