search bar added

--- a/code-week/index.html
+++ b/code-week/index.html
@@ -65,6 +65,14 @@
     <div class="wrapper">
       <header><i class="bx bx-left-arrow-alt"></i>Weather App</header>
       <button class="button-select">Scegli comune</button>
+      <form spellcheck="false" class="search-form" autocomplete="off">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input
+          class="search-input"
+          type="text"
+          placeholder=" 🔍︎ Cerca comune..."
+        />
+      </form>
       <div class="main"></div>
       <section class="input-part">
         <p class="info-txt"></p>
