added atribute playsinline for video background

--- a/code-week/index.html
+++ b/code-week/index.html
@@ -25,6 +25,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
       <video
         src="./background/clear.mp4"
@@ -32,6 +33,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
       <video
         src="./background/cloud.mp4"
@@ -39,6 +41,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
       <video
         src="./background/snow.mp4"
@@ -46,6 +49,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
       <video
         src="./background/haze.mp4"
@@ -53,6 +57,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
       <video
         src="./background/storm.mp4"
@@ -60,6 +65,7 @@
         autoplay
         muted
         loop
+        playsinline
       ></video>
     </div>
     <div class="wrapper">
