--- a/code-week/index.html
+++ b/code-week/index.html
@@ -26,6 +26,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
       <video
         src="./background/clear.mp4"
@@ -34,6 +35,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
       <video
         src="./background/cloud.mp4"
@@ -42,6 +44,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
       <video
         src="./background/snow.mp4"
@@ -50,6 +53,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
       <video
         src="./background/haze.mp4"
@@ -58,6 +62,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
       <video
         src="./background/storm.mp4"
@@ -66,6 +71,7 @@
         muted
         loop
         playsinline
+        preload="yes"
       ></video>
     </div>
     <div class="wrapper">
