modal window fixed

--- a/03-11-22/index.html
+++ b/03-11-22/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -79,7 +83,9 @@
       </div>
       <div class="modal">
         <div class="modal-content">
-          <h3>LOGIN</h3>
+          <div class="modal-header">
+            <h3>LOGIN</h3>
+          </div>
           <form class="login-form" action="">
             <label for="name"></label>
             <input
@@ -97,8 +103,8 @@
               required
             />
             <button class="login-btn">LOGIN</button>
-            <button class="close-modal-btn">X</button>
           </form>
+          <button class="close-modal-btn">+</button>
         </div>
       </div>
     </main>
