--- a/03-11-22/index.html
+++ b/03-11-22/index.html
@@ -152,7 +152,7 @@
       </div>
       <div class="modal">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-win-header">
             <h3>LOGIN</h3>
           </div>
           <form class="login-form" action="">
@@ -171,6 +171,17 @@
               placeholder="Password"
               required
             />
+            <div class="modal-win-footer">
+              <div class="remember-checkbox">
+                <label for="">
+                  <input type="checkbox" name="checkbox" id="checkbox" />
+                  Remember me
+                </label>
+              </div>
+              <div class="password-forgot">
+                <a href="http://">Password forgotten?</a>
+              </div>
+            </div>
             <button class="login-btn">LOGIN</button>
           </form>
           <button class="close-modal-btn">+</button>
